# vadum

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pkg  CMakeLists.txt  README.md  bootstrap.bat  bootstrap.sh
.github/workflows/: linux.yml  macos.yml  release.yml  set_update_url.py  unix.yml  windows.yml
cmake/: c_flag_overrides.cmake  cxx_flag_overrides.cmake  pkg.cmake
example/: .pkg  CMakeLists.txt
example/src/: main.cc
include/pkg/: clear_and_load_deps.h  dep.h  dependency_loader.h  detect_branch.h  exec.h  get_home_path.h  git.h  git_clone.h  load_deps.h  name_from_url.h  print_status.h  read_deps.h  resolve_conflicts.h  status.h  update_deps.h  upgrade_deps.h  write_deps.h
include/pkg/git/: exec.h  get_revision.h  git_clone.h  git_commit.h  git_do.h
include/vadum/: color_output.h  dep.h  dependency_loader.h  detect_branch.h  exec.h  git.h  load_deps.h  name_from_url.h  print_status.h  read_deps.h  status.h
src/: clear_and_load_deps.cc  dep.cc  dependency_loader.cc  detect_branch.cc  exec.cc  get_home_path.cc  get_revision.cc  git.cc  git_clone.cc  load_deps.cc  main.cc  name_from_url.cc  print_status.cc  read_deps.cc  resolve_conflicts.cc  status.cc  update_deps.cc  upgrade_deps.cc
src/git/: get_revision.cc  git_clone.cc  git_commit.cc
test/: branch_detection_test.cc  doctest.h  read_deps_test.cc  test_dir.h.in
test/test_repo/: .pkg  vadum.ini
test/test_repo/a/: .pkg  vadum.ini
